CSS: Fix line wrapping in <button>s
Because the new release selection button in ReviewEdit can trigger long
content. I initially added the nowrap rule to ensure the platforms in
ReleaseEdit weren't wrapped halfway, but we have a 'nowrap' class for
that.

--- a/css/forms.css
+++ b/css/forms.css
@@ -21,7 +21,6 @@ optgroup option          { padding-left: 10px }
 button                   { text-align: left }
 button svg               { height: 14px; width: 14px; margin-top: 1px; margin-bottom: -1px }
 button.ds svg            { float: right; margin-top: 3px; margin-right: -2px; margin-left: -5px }
-button span              { white-space: nowrap }
 input.obscured           { color: transparent; text-shadow: 0 0 8px var(--maintext); }
 input[type=number]       { -moz-appearance:textfield }
 input[type=number]::-webkit-outer-spin-button, input[type=number]::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0 }
